# helmet-violation-detection-BE

./: .env  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: dashboard.py  table.py  upload.py
app/dependencies/: auth.py
app/models/: enum.py  personnel.py  responses.py  tickets.py
app/repository/: dashboard_repository.py  db.py
app/services/: dashboard_service.py  table_service.py
