[tool.poetry]
name = "helmet-violation-detection-be"
version = "0.1.0"
description = "Boilerplate FastAPI app"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
