[tool.poetry]
name = "helmet-violation-detection-be"
version = "0.1.0"
description = "Boilerplate FastAPI app"
authors = ["Vincent Paul Bacalso tian2x04@gmail.com"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
sqlalchemy = "^2.0.51"
psycopg = {extras = ["binary"], version = "^3.3.4"}
alembic = "^1.18.5"
pydantic-settings = "^2.14.2"
supabase = "^2.31.0"
asyncpg = "^0.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
